--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE HTML>                                     <!This tells the computer what kind of file this is>
-<html>                                              <!Beginning of html>
-    <head>                                          <!Beginning of header>
-        <title>Expressions Worksheet</title>                             <!Title>
-        <script src="js/script.js"></script>        <!Runs the javascript file>
-    </head>                                         <!End of header>
-    <body>                                          <!Beginning of body>
-    </body>                                         <!End of body>
-</html>                                             <!End of html>
+<!DOCTYPE HTML>                                                             <!This tells the computer what kind of file this is>
+<html lang="en">                                                            <!Beginning of html, defines language>
+    <head>                                                                  <!Beginning of header>
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">  <!Defines character set to remove console error>
+        <title>Expressions Worksheet</title>                                <!Title>
+        <script src="js/script.js"></script>                                <!Runs the javascript file>
+    </head>                                                                 <!End of header>
+    <body>                                                                  <!Beginning of body>
+    </body>                                                                 <!End of body>
+</html>                                                                     <!End of html>
